# my-iam-mcp-server

./: README.md  pyproject.toml
src/my_iam_mcp_server/: __init__.py  server.py
src/my_iam_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
